# fafa-note-tauri

./: .gitignore  README.md  app.config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: JSON工具.md  auto-update-github.md  应用图标制作.md  打包构建.md  扩展指南.md  推送到GitHub.md  架构说明.md
scripts/: make-proxy-manifest.mjs  sync-app-config.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: CommandPalette.vue  NoteEditor.vue  NoteList.vue  Sidebar.vue
src/composables/: useAutoBackup.ts  useShortcuts.ts
src/config/: editor.ts  mdEditorSetup.ts  navigation.ts
src/layouts/: AppLayout.vue
src/platform/: index.ts
src/router/: index.ts
src/services/: BackupService.ts  HttpService.ts  ImageService.ts  SearchService.ts  UpdateService.ts  kvStore.ts  logger.ts
src/services/repository/: INoteRepository.ts  IndexedDbNoteRepository.ts  index.ts
src/storage/sqlite/: SqliteNoteRepository.ts.example
src/stores/: notes.ts  settings.ts  ui.ts  update.ts
src/types/: index.ts
src/utils/: jsonDiff.ts  jsonEditorZh.ts  jsonToExcel.ts
src/views/: JsonToolView.vue  LogsView.vue  NotesView.vue  SettingsView.vue  StatsView.vue  TrashView.vue
