[package]
name = "fafa-note-tauri"
version = "1.0.0"
description = "跨平台笔记管理软件（Web / 桌面 / 移动），基于 Vue3 + PrimeVue + Tauri2"
authors = ["you"]
edition = "2021"

# 库 + 二进制双产物：移动端(iOS/Android)需要 lib，桌面端用 bin。
[lib]
name = "fafa_note_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"   # 文件/目录选择对话框（选备份/还原路径）
tauri-plugin-fs = "2"       # 读写本地文件（备份导出 / 还原读取）
tauri-plugin-http = "2"     # 无 CORS 限制的 HTTP（桌面/移动端代理直连）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 桌面端自动更新（检查更新 / 下载安装 / 重启）。更新本身仅桌面端有意义。
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# 发布构建优化：体积更小
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
